Fix brand overflow
Prevent horizontal scroll on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -114,7 +114,6 @@ a {
   font-weight: bold;
   width: 100%;
   text-align: center;
-  margin: auto;
   color: #333;
   /*text-shadow: 1px 1px #ccc;*/
 
